[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Pause.gd" type="Script" id=1]

[node name="Pause" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.504
margin_top = -107.665
margin_right = -14.5037
margin_bottom = -39.6646
rect_scale = Vector2( 1.97341, 2.86762 )
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_right = 114.0
margin_bottom = 20.0
grow_vertical = 0
text = "Resume"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 114.0
margin_bottom = 44.0
text = "Main Menu"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 114.0
margin_bottom = 68.0
text = "Quit to Desktop"
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
